Added mobile styles to home view

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <title>Westside Wellness & Rehabilitation</title>
   <base href='/'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Fira+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="features/home/homeView.css" media="screen" title="no title">
 </head>
 
 <body>
